[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-agentline"
version = "0.2.0"
description = "LangChain integration for AgentLine — give AI agents real phone numbers for calls and SMS."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AgentLine HQ", email = "hello@agentline.cloud"},
]
keywords = ["langchain", "agentline", "ai-agent", "phone", "sms", "calls", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "langchain-core>=0.3.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://agentline.cloud"
Documentation = "https://docs.agentline.cloud"
Repository = "https://github.com/AgentLineHQ/langchain-agentline"

[tool.hatch.build.targets.wheel]
packages = ["langchain_agentline"]
